css: dogsvscats component

--- a/src/app/components/dogs/dogs.component.html
+++ b/src/app/components/dogs/dogs.component.html
@@ -13,18 +13,75 @@
   </div>
   <div class="row">
     <div class="col-8">
-      <span *ngIf="!badLastRating">
-        <div class="btn btn-danger" (click)="onRateButton(1)">1</div>
-        <div class="btn btn-danger" (click)="onRateButton(2)">2</div>
-        <div class="btn btn-danger" (click)="onRateButton(3)">3</div>
-        <div class="btn btn-warning" (click)="onRateButton(4)">4</div>
-        <div class="btn btn-warning" (click)="onRateButton(5)">5</div>
-        <div class="btn btn-warning" (click)="onRateButton(6)">6</div>
-      </span>
-      <div class="btn btn-success" (click)="onRateButton(7)">7</div>
-      <div class="btn btn-success" (click)="onRateButton(8)">8</div>
-      <div class="btn btn-success" (click)="onRateButton(9)">9</div>
-      <div class="btn btn-primary" (click)="onRateButton(10)">10</div>
+      <div
+        class="btn-toolbar"
+        role="toolbar"
+        aria-label="Toolbar with button groups"
+      >
+        <div class="btn-group" role="group">
+          <div
+            *ngIf="!badLastRating"
+            type="button"
+            class="btn btn-danger"
+            (click)="onRateButton(1)"
+          >
+            1
+          </div>
+          <div
+            *ngIf="!badLastRating"
+            type="button"
+            class="btn btn-danger"
+            (click)="onRateButton(2)"
+          >
+            2
+          </div>
+          <div
+            *ngIf="!badLastRating"
+            type="button"
+            class="btn btn-danger"
+            (click)="onRateButton(3)"
+          >
+            3
+          </div>
+          <div
+            *ngIf="!badLastRating"
+            type="button"
+            class="btn btn-warning"
+            (click)="onRateButton(4)"
+          >
+            4
+          </div>
+          <div
+            *ngIf="!badLastRating"
+            type="button"
+            class="btn btn-warning"
+            (click)="onRateButton(5)"
+          >
+            5
+          </div>
+          <div
+            *ngIf="!badLastRating"
+            type="button"
+            class="btn btn-warning"
+            (click)="onRateButton(6)"
+          >
+            6
+          </div>
+
+          <div type="button" class="btn btn-success" (click)="onRateButton(7)">
+            7
+          </div>
+          <div type="button" class="btn btn-success" (click)="onRateButton(8)">
+            8
+          </div>
+          <div type="button" class="btn btn-success" (click)="onRateButton(9)">
+            9
+          </div>
+          <div type="button" class="btn btn-primary" (click)="onRateButton(10)">
+            10
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
