--- a/src/app/components/dogsVsCats/dogsVsCats.component.css
+++ b/src/app/components/dogsVsCats/dogsVsCats.component.css
@@ -1,7 +1,134 @@
+.title {
+  font-weight: bold;
+}
+
 img {
   width: 100%;
 }
 
-.btn-rate {
-  width: 9%;
+.img-row {
+  height: 62vh;
+}
+
+.img-col {
+  max-height: 60vh;
+}
+
+.img-pet {
+  max-height: 100%;
+}
+
+.vs-img {
+  margin-top: 10vh;
+}
+
+.card {
+  height: 15vh;
+  margin-bottom: 3%;
+}
+
+.btn-group {
+  width: 90%;
+}
+
+.btn-toolbar {
+  place-content: center;
+}
+
+.btn-64,
+.btn-64 *,
+.btn-64 :after,
+.btn-64 :before,
+.btn-64:after,
+.btn-64:before {
+  border: 0 solid;
+  box-sizing: border-box;
+}
+.btn-64 {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: button;
+  background-color: #000;
+  background-image: none;
+  color: #fff;
+  cursor: pointer;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-size: 100%;
+  line-height: 1.5;
+  margin: 0;
+  -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
+  padding: 0;
+}
+.btn-64:disabled {
+  cursor: default;
+}
+.btn-64:-moz-focusring {
+  outline: auto;
+}
+.btn-64 svg {
+  display: block;
+  vertical-align: middle;
+}
+.btn-64 [hidden] {
+  display: none;
+}
+.btn-64 {
+  background: none;
+  box-sizing: border-box;
+  color: #000;
+  display: block;
+  font-weight: 900;
+  -webkit-mask-image: none;
+  padding: 1.5rem 4rem;
+  position: relative;
+  text-transform: uppercase;
+}
+.btn-64 span {
+  background: #fff;
+  border: 1px solid;
+  border-radius: 999px;
+  display: grid;
+  inset: 0;
+  place-items: center;
+  pointer-events: none;
+  position: absolute;
+}
+.btn-64:hover span {
+  -webkit-animation: heartBeat 0.8s;
+  animation: heartBeat 0.8s;
+}
+@-webkit-keyframes heartBeat {
+  0% {
+    transform: scale(1);
+  }
+  14% {
+    transform: scale(1.3);
+  }
+  28% {
+    transform: scale(1);
+  }
+  42% {
+    transform: scale(1.3);
+  }
+  70% {
+    transform: scale(1);
+  }
+}
+@keyframes heartBeat {
+  0% {
+    transform: scale(1);
+  }
+  14% {
+    transform: scale(1.3);
+  }
+  28% {
+    transform: scale(1);
+  }
+  42% {
+    transform: scale(1.3);
+  }
+  70% {
+    transform: scale(1);
+  }
 }
