welcome component: randomdogs, pawloveImg, css

--- a/src/app/components/dogsVsCats/dogsVsCats.component.html
+++ b/src/app/components/dogsVsCats/dogsVsCats.component.html
@@ -70,9 +70,9 @@
       />
     </div>
   </div>
-  <div class="container bottom-container">
+  <div class="container bottom-container p-0">
     <div class="row justify-content-center">
-      <div class="col-6 col-sm-2">
+      <div class="col-6 col-sm-6 col-md-2">
         <div class="row">
           <div class="col-4">
             <svg
@@ -116,7 +116,7 @@
           <div class="col-12 text-white text-center">Total Dogs Avg: 0</div>
         </div>
       </div>
-      <div class="col-10 col-sm-8 p-0">
+      <div class="col-12 col-sm-12 col-md-8 p-0">
         <div class="row">
           <div class="col-12 p-0">
             <div
@@ -223,7 +223,7 @@
         </div>
       </div>
 
-      <div class="col-6 col-sm-2">
+      <div class="col-6 col-sm-6 col-md-2">
         <div class="row">
           <div class="col-4">
             <svg
