--- a/src/app/components/dogs/dogs.component.html
+++ b/src/app/components/dogs/dogs.component.html
@@ -36,7 +36,7 @@
       </div>
     </div>
   </div>
-  <div class="container bottom-container">
+  <div class="container bottom-container p-0">
     <div class="row justify-content-center">
       <div class="col-4 col-sm-2">
         <div class="row">
